src/objects/MetadataPicklistEntry__c.object
<CustomObject>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <externalId>true</externalId>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>OR(
    TEXT(Status__c) == &apos;Not Used&apos;,
    TEXT(Status__c) == &apos;Done&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDefaultValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInScope__c</fullName>
        <formula>OR(
    IsClosed__c = false,
    TEXT(Status__c) = &apos;Done&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is In Scope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MetadataField__c</fullName>
        <label>Field</label>
        <referenceTo>MetadataField__c</referenceTo>
        <relationshipName>Picklist_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MetadataSObjectLink__c</fullName>
        <formula>HYPERLINK(MetadataField__r.MetadataSObject__c,  MetadataField__r.MetadataSObject__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SObject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MetadataStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uuid__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Picklist Entry</label>
    <nameField>
        <label>Picklist Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Entries</pluralLabel>
    <recordTypes>
        <fullName>Asset</fullName>
        <active>true</active>
        <label>Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Blueprint</fullName>
        <active>true</active>
        <label>Blueprint</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>